--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,10 @@
 spring.application.name=app
 
-spring.datasource.url=jdbc:mysql://localhost:3306/app?useSSL=false&allowPublicKeyRetrieval=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://database-1.c3i40yesy1oq.us-east-2.rds.amazonaws.com:3306/app?useSSL=false&allowPublicKeyRetrieval=false&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=pepe22
+spring.datasource.password=Elian2020
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+server.port = 5000
